# nexus-explorer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.me  build.rs
.github/workflows/: build.yml  ci.yml  release.yml  update-homebrew.yml  version-bump.yml
.kiro/specs/file-explorer-core/: design.md  requirements.md  tasks.md
.kiro/specs/ui-enhancements/: design.md  requirements.md  tasks.md
.kiro/steering/: attention.md  product.md  structure.md  tech.md
adabaraka/: Cargo.toml  README.md
adabaraka/docs/: index.html
adabaraka/examples/: accordion_demo.rs  accordion_styled_demo.rs  alert_dialog_styled_demo.rs  animations_demo.rs  app_menu_demo.rs  app_menu_styled_demo.rs  avatar_styled_demo.rs  badge_styled_demo.rs  bottom_sheet_styled_demo.rs  breadcrumbs_styled_demo.rs  button_features_demo.rs  button_styled_demo.rs  calendar_styled_demo.rs  card_demo.rs  card_styled_demo.rs  checkbox_styled_demo.rs  click_test.rs  collapsible_styled_demo.rs  color_picker_demo.rs  combobox_demo.rs  command_palette_demo.rs  command_palette_styled_demo.rs  complex_layout_demo.rs  confirm_dialog_styled_demo.rs  context_menu_styled_demo.rs  data_table_demo.rs  data_table_styled_demo.rs  date_picker_demo.rs  debug_into_element.rs  debug_scroll.rs  demo.rs  demo_no_scroll.rs  dialog_styled_demo.rs  drag_drop_demo.rs  drag_drop_styled_demo.rs  editor_demo.rs  editor_styled_demo.rs  hover_card_styled_demo.rs  icon_button_styled_demo.rs  icon_path_test.rs  (+66 more)
adabaraka/src/: animations.rs  fonts.rs  layout.rs  lib.rs  prelude.rs  transitions.rs  util.rs  virtual_list.rs
adabaraka/src/components/: avatar.rs  button.rs  calendar.rs  checkbox.rs  collapsible.rs  color_picker.rs  combobox.rs  confirm_dialog.rs  date_picker.rs  drag_drop.rs  editor.rs  icon.rs  icon_button.rs  icon_source.rs  input.rs  input_state.rs  keyboard_shortcuts.rs  label.rs  mod.rs  navigation_menu.rs  pagination.rs  progress.rs  radio.rs  resizable.rs  scrollable.rs  scrollbar.rs  search_input.rs  select.rs  separator.rs  skeleton.rs  slider.rs  text.rs  text_field.rs  textarea.rs  toggle.rs  toggle_group.rs  tooltip.rs
adabaraka/src/display/: accordion.rs  badge.rs  card.rs  data_table.rs  mod.rs  table.rs
adabaraka/src/navigation/: app_menu.rs  breadcrumbs.rs  menu.rs  mod.rs  sidebar.rs  status_bar.rs  tabs.rs  toolbar.rs  tree.rs  virtual_list.rs
adabaraka/src/overlays/: alert_dialog.rs  bottom_sheet.rs  command_palette.rs  context_menu.rs  dialog.rs  hover_card.rs  mod.rs  popover.rs  popover_menu.rs  sheet.rs  toast.rs
adabaraka/src/theme/: mod.rs  theme.rs  tokens.rs
assets/: AppIcon.icns
nexus-explorer/: App.tsx  constants.tsx  index.html  metadata.json  package.json  types.ts
nexus-explorer/components/: Features.tsx  Hero.tsx  MockApp.tsx
nexus-explorer/services/: geminiService.ts
packaging/homebrew/: nexus-explorer.rb
packaging/scoop/: nexus-explorer.json
proptest-regressions/io/platform/: windows_tests.txt
proptest-regressions/models/: file_share_tests.txt  file_system_tests.txt  settings.txt  wsl_tests.txt
proptest-regressions/utils/: format.txt
proptest-regressions/views/: file_list_tests.txt
scripts/: remove_line_comments.py  remove_single_line_comments.py
src/: lib.rs  main.rs
src/app/: workspace.rs
src/io/: mod.rs  pipeline.rs  traversal.rs
src/io/platform/: coalescer.rs  linux.rs  macos.rs  mod.rs  watcher.rs  windows.rs  windows_tests.rs
src/models/: ansi_parser.rs  ansi_parser_tests.rs  archive_manager.rs  archive_manager_tests.rs  batch_rename.rs  batch_rename_tests.rs  bookmarks.rs  clipboard.rs  clipboard_tests.rs  column_view.rs  column_view_tests.rs  default_app.rs  device_monitor.rs  device_monitor_linux.rs  device_monitor_macos.rs  device_monitor_tests.rs  device_monitor_windows.rs  drag_drop.rs  dual_pane.rs  dual_pane_tests.rs  encrypted_volume.rs  encrypted_volume_tests.rs  favorites.rs  favorites_tests.rs  file_hash.rs  file_hash_tests.rs  file_operations.rs  file_share.rs  file_share_tests.rs  file_system.rs  file_system_tests.rs  icon_cache.rs  icon_cache_tests.rs  mod.rs  network_storage.rs  open_with.rs  permissions.rs  permissions_tests.rs  permissions_windows.rs  platform_adapter.rs  (+24 more)
src/utils/: cache.rs  format.rs  icons.rs  mod.rs
src/views/: batch_rename_dialog.rs  breadcrumb.rs  breadcrumb_tests.rs  checksum_dialog.rs  column_view.rs  conflict_dialog.rs  dual_pane.rs  file_list.rs  file_list_tests.rs  format_dialog.rs  go_to_folder.rs  grid_view.rs  mod.rs  network_dialog.rs  permissions_dialog.rs  preview.rs  preview_tests.rs  progress_panel.rs  quick_look.rs  search_input.rs  share_dialog.rs  sidebar.rs  smart_folder_dialog.rs  status_bar.rs  symlink_dialog.rs  tab_bar.rs  tag_ui.rs  terminal.rs  theme_picker.rs  toast.rs  unlock_dialog.rs
tests/: smart_folders_integration.rs
