[package]
name = "file-explorer"
version = "0.1.0"
edition = "2021"
description = "A high-performance file explorer built with Rust and GPUI"
license = "MIT"

[lib]
name = "file_explorer"
path = "src/lib.rs"

[[bin]]
name = "file-explorer"
path = "src/main.rs"

[dependencies]
gpui = { version = "*" }
adabraka-ui = "0.2.3"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "fs"] }
jwalk = "0.8"
flume = "0.11"
nucleo = "0.5"
notify = "6.1"
image = "0.25"
bincode = "1.3"
thiserror = "2.0"
lru = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
lazy_static = "1.5"
trash = "5.1"
portable-pty = "0.8"
chrono = "0.4"
xattr = "1.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies if needed

[dev-dependencies]
proptest = "1.5"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
