[package]
name = "nexus-explorer"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast, GPU-accelerated file explorer built with Rust and GPUI"
license = "MIT"
repository = "https://github.com/augani/nexus-explorer"
homepage = "https://github.com/augani/nexus-explorer"
readme = "README.md"
keywords = ["file-explorer", "file-manager", "gpui", "gui", "desktop"]
categories = ["gui", "filesystem"]
authors = ["Augustus Otu <augani@icloud.com>"]
rust-version = "1.75"

[lib]
name = "file_explorer"
path = "src/lib.rs"

[[bin]]
name = "nexus-explorer"
path = "src/main.rs"

[dependencies]
gpui = { version = "*" }
adabraka-ui = "0.2.3"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "fs"] }
jwalk = "0.8"
flume = "0.11"
nucleo = "0.5"
notify = "6.1"
image = "0.25"
bincode = "1.3"
thiserror = "2.0"
lru = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
lazy_static = "1.5"
trash = "5.1"
portable-pty = "0.8"
chrono = "0.4"
libc = "0.2"
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
sevenz-rust = "0.6"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Security"] }
wmi = "0.14"

[target.'cfg(unix)'.dependencies]
xattr = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9"
zbus = { version = "4.4", default-features = false, features = ["tokio"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
