[package]
name = "adabraka-ui"
version = "0.2.3"
edition = "2021"
authors = ["Adabraka Team"]
license = "MIT"
description = "A comprehensive, professional UI component library for GPUI inspired by shadcn/ui. 73+ accessible components for building beautiful desktop applications."
repository = "https://github.com/augani/adabraka-ui"
homepage = "https://github.com/augani/adabraka-ui"
documentation = "https://docs.rs/adabraka-ui"
readme = "README.md"
keywords = ["gpui", "ui", "gui", "components", "desktop"]
categories = ["gui", "rendering"]
rust-version = "1.70"
exclude = ["assets/icons/**/*"]

[dependencies]
# Core Framework
gpui = "0.2.0"
smallvec = "1.13.2"
once_cell = "1.19"

# Text Processing
unicode-segmentation = "1.12"
regex = "1.10"

# Async Runtime
smol = "2.0.2"

# Syntax Highlighting (tree-sitter based)
tree-sitter = "0.25.10"
tree-sitter-sequel = "0.3.11"

[[example]]
name = "scroll_test"
path = "examples/scroll_test.rs"

[[example]]
name = "label_styled_demo"
path = "examples/label_styled_demo.rs"

[[example]]
name = "collapsible_styled_demo"
path = "examples/collapsible_styled_demo.rs"

[[example]]
name = "calendar_styled_demo"
path = "examples/calendar_styled_demo.rs"

[[example]]
name = "tooltip_styled_demo"
path = "examples/tooltip_styled_demo.rs"

[[example]]
name = "toggle_group_styled_demo"
path = "examples/toggle_group_styled_demo.rs"

[[example]]
name = "pagination_styled_demo"
path = "examples/pagination_styled_demo.rs"

[[example]]
name = "keyboard_shortcuts_styled_demo"
path = "examples/keyboard_shortcuts_styled_demo.rs"

[[example]]
name = "navigation_menu_styled_demo"
path = "examples/navigation_menu_styled_demo.rs"

[[example]]
name = "text_field_styled_demo"
path = "examples/text_field_styled_demo.rs"

[[example]]
name = "confirm_dialog_styled_demo"
path = "examples/confirm_dialog_styled_demo.rs"

[[example]]
name = "card_styled_demo"
path = "examples/card_styled_demo.rs"

[[example]]
name = "tabs_styled_demo"
path = "examples/tabs_styled_demo.rs"

[[example]]
name = "table_styled_demo"
path = "examples/table_styled_demo.rs"

[[example]]
name = "breadcrumbs_styled_demo"
path = "examples/breadcrumbs_styled_demo.rs"

[[example]]
name = "badge_styled_demo"
path = "examples/badge_styled_demo.rs"

[[example]]
name = "menu_styled_demo"
path = "examples/menu_styled_demo.rs"

[[example]]
name = "accordion_styled_demo"
path = "examples/accordion_styled_demo.rs"

[[example]]
name = "toolbar_styled_demo"
path = "examples/toolbar_styled_demo.rs"

[[example]]
name = "sidebar_styled_demo"
path = "examples/sidebar_styled_demo.rs"

[[example]]
name = "dialog_styled_demo"
path = "examples/dialog_styled_demo.rs"

[[example]]
name = "sheet_styled_demo"
path = "examples/sheet_styled_demo.rs"

[[example]]
name = "alert_dialog_styled_demo"
path = "examples/alert_dialog_styled_demo.rs"

[[example]]
name = "command_palette_styled_demo"
path = "examples/command_palette_styled_demo.rs"

[[example]]
name = "status_bar_styled_demo"
path = "examples/status_bar_styled_demo.rs"

[[example]]
name = "tree_styled_demo"
path = "examples/tree_styled_demo.rs"

[[example]]
name = "toast_styled_demo"
path = "examples/toast_styled_demo.rs"

[[example]]
name = "bottom_sheet_styled_demo"
path = "examples/bottom_sheet_styled_demo.rs"

[[example]]
name = "popover_styled_demo"
path = "examples/popover_styled_demo.rs"

[[example]]
name = "popover_menu_styled_demo"
path = "examples/popover_menu_styled_demo.rs"

[[example]]
name = "hover_card_styled_demo"
path = "examples/hover_card_styled_demo.rs"


[[example]]
name = "context_menu_styled_demo"
path = "examples/context_menu_styled_demo.rs"

[[example]]
name = "app_menu_styled_demo"
path = "examples/app_menu_styled_demo.rs"

[[example]]
name = "select_styled_demo"
path = "examples/select_styled_demo.rs"

[[example]]
name = "resizable_styled_demo"
path = "examples/resizable_styled_demo.rs"

[[example]]
name = "editor_styled_demo"
path = "examples/editor_styled_demo.rs"

[[example]]
name = "data_table_styled_demo"
path = "examples/data_table_styled_demo.rs"

[[example]]
name = "drag_drop_styled_demo"
path = "examples/drag_drop_styled_demo.rs"

[[example]]
name = "date_picker_demo"
path = "examples/date_picker_demo.rs"

[[example]]
name = "color_picker_demo"
path = "examples/color_picker_demo.rs"

[[example]]
name = "combobox_demo"
path = "examples/combobox_demo.rs"
